--- a/web/app/templates/moneytracker.html
+++ b/web/app/templates/moneytracker.html
@@ -7,6 +7,11 @@
   <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
 </head>
 <body>
-  <h1>My's  Website</h1>
+  <h1>MyWebsite</h1>
+  <button id="logout" type="button">Logout</button>
+  <script>$("#logout").click(function () {
+    window.location.href = "/logout";
+  });
+  </script>
 </body>
 </html>
