--- a/web/app/static/css/moneytracker.css
+++ b/web/app/static/css/moneytracker.css
@@ -1,14 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,900&display=swap');
 
 
-
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
+
 body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: url(img/Wallpaper.png) no-repeat;
+    background-size: cover;
+    background-position: center;
     background-color: lightblue;
 }
 
@@ -18,7 +25,6 @@ header{
     left: 0;
     width: 100%;
     padding:20px 100px;
-    background: rgb(181, 181, 230);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -49,6 +55,15 @@ header{
     height:  3px;
     background: #ffff;
     border-radius:  5px;
+    transform-origin:right;
+    transform: scaleX(0);
+    transition: transform .5s;
+}
+
+
+.navigation a:hover ::after{
+    transform-origin:left ;
+    transform: scaleX(1);
 
 }
 
@@ -71,3 +86,55 @@ header{
     background: white;
     color: #162938;
 }
+/* login */
+.box{
+    position: relative;
+    width: 500px;
+    height: 540px;
+    background: transparent;
+    border: 2px solid rgb(255, 255,255,.5);
+    border-radius:20px;
+    backdrop-filter:blur(20px);
+    box-shadow: 0 0 30px rgb(0,0,0,.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.box .field{
+    width: 100%;
+    padding: 5px;
+}
+.title h2{
+    font-size: 2em;
+    color: #162938;
+    text-align: center;
+}
+.input-box{
+    position: relative;
+    width: 100%;
+    height: 50px;
+    border-bottom: 2px solid #162938;
+    margin: 30px 0;
+}
+.input-box label{
+    position:absolute;
+    top: 50px;
+    left: 5px;
+    transform: translateY(-50%);
+    font-size: 1em;
+    color: #162938;
+    font-weight: 500;
+    pointer-events: none;
+}
+
+.input-box input{
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+}
+
+
+
+
