--- a/web/app/templates/base.html
+++ b/web/app/templates/base.html
@@ -5,14 +5,25 @@
 <head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
- <title>Flask Login</title>
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" />
+ <title>MoneyTracker</title>
+ <link rel="stylesheet" href="static/css/moneytracker.css">
+ <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" /> -->
 </head>
 
 
 <body>
+  <header>
+    <h2 class="logo">Money Tracker</h2>
+    <nav class="navigation">
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Services</a>
+      <a href="#">Contact</a>
+      <button href="{{ url_for('login') }}"class="btnLogin-pop">Login</button>
+    </nav>
+  </header>
  <section class="hero is-primary is-fullheight">
-    <nav class="navbar">
+    <nav class="navigation">
         <div class="container ">
           <div class="navbar-brand">
             <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarMenuHeroA">
@@ -22,7 +33,7 @@
             </a>
           </div>
           <div id="navbarMenuHeroA" class="navbar-menu">
-            <div class="navbar-start">
+            <div class="navigation">
               <a href="{{ url_for('index') }}" class="navbar-item">
                 Home
               </a>
