--- a/web/app/static/css/moneytracker.css
+++ b/web/app/static/css/moneytracker.css
@@ -135,6 +135,21 @@ header{
     outline: none;
 }
 
+.input-box .icon{
+    position:absolute;
+    right: 8px;
+    
+}
+
+.buttonmit{
+    position: relative;
+    font-size:  1.1em;
+    color: #3dea1e;
+    text-decoration: none;
+    font-weight:  500;
+    margin-left:  40px;
+    text-align: center;
+}
 
 
 
