--- a/web/app/templates/moneytracker.html
+++ b/web/app/templates/moneytracker.html
@@ -7,8 +7,10 @@
   <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
 </head>
 <body>
+  <header>
   <h1>MyWebsite</h1>
-  <button id="logout" type="button">Logout</button>
+  <button class="btnLogin-pop"id="logout" type="button">Logout</button>
+  </header>
   <script>$("#logout").click(function () {
     window.location.href = "/logout";
   });
