--- a/web/app/templates/base.html
+++ b/web/app/templates/base.html
@@ -8,6 +8,9 @@
  <title>MoneyTracker</title>
  <link rel="stylesheet" href="static/css/moneytracker.css">
  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" /> -->
+ <!-- icon from ionicons -->
+ <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+ <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
 
 
@@ -21,47 +24,8 @@
       <a href="#">Contact</a>
       <button href="{{ url_for('login') }}"class="btnLogin-pop">Login</button>
     </nav>
-  </header>
+  </header> 
  <section class="hero is-primary is-fullheight">
-    <nav class="navigation">
-        <div class="container ">
-          <div class="navbar-brand">
-            <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarMenuHeroA">
-              <span aria-hidden="true"></span>
-              <span aria-hidden="true"></span>
-              <span aria-hidden="true"></span>
-            </a>
-          </div>
-          <div id="navbarMenuHeroA" class="navbar-menu">
-            <div class="navigation">
-              <a href="{{ url_for('index') }}" class="navbar-item">
-                Home
-              </a>
-              {% if current_user.is_authenticated %}
-              <a href="{{ url_for('profile') }}" class="navbar-item">
-                Profile
-              </a>
-              {% endif %}
-            </div>
-            <div class="navbar-end">
-              {% if not current_user.is_authenticated %}
-              <a href="{{ url_for('login') }}" class="navbar-item">
-                Login
-              </a>
-              <a href="{{ url_for('signup') }}" class="navbar-item">
-                Sign Up
-              </a>
-              {% else %}
-              <img src="{{ current_user.avatar_url }}" width="52">
-              <a href="{{ url_for('logout') }}" class="navbar-item">
-                Logout
-              </a>
-              {% endif %}
-            </div>
-          </div>
-        </div>
-      </nav>
-   </div>
    <div class="hero-body">
      <div class="container has-text-centered">
        {% block content %}
