--- a/web/app/templates/login.html
+++ b/web/app/templates/login.html
@@ -14,7 +14,7 @@
    <form method="POST">
      <div class="field">
        <div class="control">
-        <span class="icon"><ion-icon name="mail"></ion-icon></span>
+        <span class="icon"><ion-icon name="mail"></ion-icon> </span>
         <label>Email</label>
         <input class="input-box" type="email" name="email" placeholder="Your Email" autofocus="">
        </div>
@@ -32,7 +32,9 @@
          Remember me
        </label>
      </div>
-     <button class="button is-block is-info is-large is-fullwidth">Login</button>
+     <button class="buttonmit">Login</button><br>
+     <button class="buttonmit">with Facebook</button><br>
+     <button class="buttonmit">with Google</button><br>
    </form>
  </div>
 
