--- a/web/app/static/css/moneytracker.css
+++ b/web/app/static/css/moneytracker.css
@@ -91,7 +91,6 @@ header{
     position: relative;
     width: 500px;
     height: 540px;
-    background: transparent;
     border: 2px solid rgb(255, 255,255,.5);
     border-radius:20px;
     backdrop-filter:blur(20px);
@@ -100,21 +99,17 @@ header{
     justify-content: center;
     align-items: center;
 }
-.box .field{
-    width: 100%;
-    padding: 5px;
-}
-.title h2{
-    font-size: 2em;
-    color: #162938;
+
+ h3{
+    font-size: 3em;
+    color: #fdfeff;
     text-align: center;
 }
 .input-box{
     position: relative;
-    width: 100%;
-    height: 50px;
-    border-bottom: 2px solid #162938;
+    width: 310PX;
     margin: 30px 0;
+    border-bottom: 2px solid #162938;
 }
 .input-box label{
     position:absolute;
@@ -123,32 +118,47 @@ header{
     transform: translateY(-50%);
     font-size: 1em;
     color: #162938;
-    font-weight: 500;
     pointer-events: none;
+    transition: .5s;
 }
 
-.input-box input{
+.input-box input:focus~label,
+.input-box input:valid~label {
+    top:-5px;
+}
+
+.input-box input {
     width: 100%;
-    height: 100%;
+    height: 50px;
     background: transparent;
     border: none;
     outline: none;
+    font-size: 1em;
+    color: #ffffff;
+    padding: 0 8px 0 5px;
 }
+
+
 
 .input-box .icon{
     position:absolute;
     right: 8px;
+    color: #162938;
+    font-size: 1.2em;
+    line-height: 57px;
     
 }
 
 .buttonmit{
-    position: relative;
-    font-size:  1.1em;
-    color: #3dea1e;
-    text-decoration: none;
-    font-weight:  500;
-    margin-left:  40px;
-    text-align: center;
+    width: 100%;
+    height: 40px;
+    background: #fff;
+    border: none;
+    outline: none;
+    border-radius: 40px;
+    cursor: pointer;
+    color: #000;
+    font-weight: 500;
 }
 
 
